Replace deprecated calls to add_matlab_test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-
-add_matlab_test(NAME examples/LittleDog/LittleDog.runPDhome COMMAND LittleDog.runPDhome)
-add_matlab_test(NAME examples/LittleDog/LittleDog.runPassive COMMAND LittleDog.runPassive)
-add_matlab_test(NAME examples/LittleDog/gaitOptimization COMMAND gaitOptimization)
+drake_add_matlab_test(NAME examples/LittleDog/LittleDog.runPDhome
+  COMMAND LittleDog.runPDhome)
+drake_add_matlab_test(NAME examples/LittleDog/LittleDog.runPassive
+  COMMAND LittleDog.runPassive)
+drake_add_matlab_test(NAME examples/LittleDog/gaitOptimization
+  COMMAND gaitOptimization REQUIRES lcm libbot)
